# bug-app

./: .gitignore  README.md
api/: Cargo.toml  package.json  serverless.yml
api/body_mapping_templates/: create_bug.vtl  path_to_body.yml  project-and-bug-ids-to-body.vtl  project-id-path-to-body.vtl  update_bug.vtl  update_project.vtl
api/bugs/: Cargo.toml
api/common/: Cargo.toml
api/common/src/: bug.rs  lib.rs  priority.rs  project.rs  status.rs
api/create_bug/: Cargo.toml
api/create_bug/src/: main.rs
api/create_project/: Cargo.toml
api/create_project/src/: main.rs
api/delete_bug/: Cargo.toml
api/delete_bug/src/: main.rs
api/delete_project/: Cargo.toml
api/delete_project/src/: main.rs
api/get_bug/: Cargo.toml
api/get_bug/src/: main.rs
api/get_bugs/: Cargo.toml
api/get_bugs/src/: main.rs
api/get_project/: Cargo.toml
api/get_project/src/: main.rs
api/get_projects/: Cargo.toml
api/get_projects/src/: main.rs
api/update_bug/: Cargo.toml
api/update_bug/src/: main.rs
api/update_project/: Cargo.toml
api/update_project/src/: main.rs
app/: .eslintrc.js  README.md  package.json  tsconfig.json
app/public/: index.html
app/src/: App.tsx  app.styles.ts  setup-font-awesome.ts  use-theme.hook.ts
app/src/api/: http-client-base.abstract.ts  project.api.ts
app/src/data/: routes.tsx
app/src/forms/: project.form.ts
app/src/hooks/: use-theme.hooks.ts
app/src/models/: bug.ts  form.ts  priority.ts  project.ts  status.ts
app/src/state/: project.state.ts  projects.state.ts
app/src/styles/: global-styles.ts  theme.ts  utils.js
app/src/templates/: layout.component.tsx  layout.styles.ts
app/src/typings/: styled.d.ts
(+34 files in other folders)
