[package]
name = "bug"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2"
lambda_http = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1.6"
uuid = {version = "0.8", features = ["serde", "v4"]}
