[package]
name = "common"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
lambda_http = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
dynomite = "0.8.2"
