[package]
name = "get_bug"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
# https://github.com/awslabs/aws-lambda-rust-runtime/issues/216
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
lambda_http = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1.6"
uuid = {version = "0.8", features = ["serde", "v4"]}
tokio = { version = "0.2", features = ["macros"] }
dynomite = {version = "0.8"}

